--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "website URL :",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/*.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,8 @@
     "redis": "^3.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.0.0"
+    "eslint": "^7.8.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
